
SVN /trunk
==========


v0.68 (September 17 2007)
=========================
- [r117]: fix unaligned access (sparc64)
- [r118]: fixed: start script did not start due to missing path
- [r121]: open() flags also needed translation
- [r122]: fixed: hardlink always returned ENOENT
- [r123]: --enable-workarounds only required for < 2.6.16


v0.67 (August 30 2007)
======================
- [r105]: fixed: net_lock mutex was inadvertently underflown
- [r106]: fixed: linkat always returned -EINVAL
- [r108]: added workarounds for kernel < 2.6.22 (sic: 2.6.16)
- [r110]: build/configure script fixes (also make it work with autoconf 2.59)


v0.66 (August 25 2007)
======================
- [r86]: encoding changes (size_t should be encoded as 64-bit)
- [r89]: implement fsync, hardlink, and the rest of the xattr functions
- [r95]: lower minimum requirement to FUSE 2.6.5
- [r96]: encoding fixes (errno codes are not the same across architectures)
- alignment fixes (much needed for RISC processors, e.g. SPARC64)
- endianess fixes (needed for big-endian parties, e.g. SPARC)


v0.48 (August 19 2007 23:11)
============================
- [r62]: mount.c, storage.c: mknod operation implemented
- [r64]: mount.c: create packet send/receive operation was fixed
- [r66]: mount.c: ensure network packet ordering in mount daemon


v0.45 (August 19 2007 19:11)
============================
Implemented automatic restart of processes and config reloading in ccgfs-super.
Its options are now also changable through the config file.

Byteswapping is now performed on big-endian machines (since the packet format
is usually little-endian).


v0.33 (August 13 2007 01:23)
============================
Initial version.